# EdgeViewerApp

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/adityasaini/edgeviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  edge_processor.h
app/src/main/cpp/: edge_processor.cpp  native-lib.cpp
app/src/main/java/com/adityasaini/edgeviewer/: GLSurfaceViewRenderer.kt  MainActivity.kt  NativeLib.kt
app/src/main/java/com/adityasaini/edgeviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/adityasaini/edgeviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html
web/src/: app.js  app.js.map  app.ts
